# AI-course

./: pyproject.toml
Perceptron_CNNRNN/: Seq2Seq.ipynb  Seq2Seq.py
Perceptron_CNNRNN/.ipynb_checkpoints/: Seq2Seq-checkpoint.ipynb
Transformer/: Copilot_Transformer.ipynb  IMDB 리뷰 감성 분류.ipynb  Seq2Seq.ipynb  Transformer.ipynb  Transformer_Korean_Chatbot.py  Transformer_Korean_Chatbot_bak.ipynb  attention.ipynb  main.py  pyproject.toml  reproduce_error.py  reproduce_error_v2.py  reproduce_sparse_error.py  verify_fix.py  verify_robust_fix.py
Transformer/.ipynb_checkpoints/: Transformer_Korean_Chatbot-checkpoint.ipynb
langchain/: langchain_streamlit_tool.py  langchain_tool.ipynb  langchain_tool_stream.ipynb  pydantic.ipynb  simple-chatbot_InMemoryChatMessageHistory.ipynb  simple_chatbot_invoke.py  simple_chatbot_stream.py
langchain/.ipynb_checkpoints/: lcel-checkpoint.ipynb  pydantic-checkpoint.ipynb
pandas/notebook/: 04장 그래프 그리기.ipynb  Penguins.ipynb  데이터시각화.ipynb
pandas/notebook/.ipynb_checkpoints/: Iris-checkpoint.ipynb
streamlit/: data.py  pets.db  sidebar.py
streamlit/cheat_sheet/: chat_app.py  columns.py  control_flow.py  display_media.py  display_widgets.py  tabs.py
