[project]
name = "ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.6",
    "jupyterlab-git>=0.52.0",
    "langchain-google-genai>=4.2.2",
    "seaborn>=0.13.2",
    "sqlalchemy==1.4.0",
    "streamlit>=1.55.0",
    "tabulate>=0.10.0",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.9",
    "yfinance>=1.3.0",
]
